# volume-mixer-applet

./: CMakeLists.txt
data/: CMakeLists.txt
data/desktop/: CMakeLists.txt  volume-mixer-applet.desktop
data/ui/: CMakeLists.txt  popup-menu.glade  popup-window-horizontal.glade  popup-window-vertical.glade  prefs-dialog.glade
src/: CMakeLists.txt  ui-hotkey-dialog.c  ui-popup-menu.c  ui-popup-window.c  ui-prefs-dialog.c  ui-tray-icon.c
